cloudformation-templates/dev-networking.template
AWSTemplateFormatVersion: '2010-09-09'
Resources:
  SpendTxnsDevVPC:
    Type: 'AWS::EC2::VPC'
    Properties:
      CidrBlock: 10.0.0.0/16
      InstanceTenancy: default
      EnableDnsSupport: 'true'
      EnableDnsHostnames: 'true'
      Tags:
        - Key: Name
          Value: SpendTxnsDev-VPC
  SpendTxnsDevSubnet1:
    Type: 'AWS::EC2::Subnet'
    Properties:
      CidrBlock: 10.0.1.0/24
      AvailabilityZone: ap-southeast-1a
      VpcId:
        Ref: SpendTxnsDevVPC
      Tags:
        - Key: Name
          Value: SpendTxnsDev-subnet1
  SpendTxnsDevSubnet2:
    Type: 'AWS::EC2::Subnet'
    Properties:
      CidrBlock: 10.0.2.0/24
      AvailabilityZone: ap-southeast-1b
      VpcId:
        Ref: SpendTxnsDevVPC
      Tags:
        - Key: Name
          Value: SpendTxnsDev-subnet2
  SpendTxnsDevSubnet3:
    Type: 'AWS::EC2::Subnet'
    Properties:
      CidrBlock: 10.0.3.0/24
      AvailabilityZone: ap-southeast-1c
      VpcId:
        Ref: SpendTxnsDevVPC
      Tags:
        - Key: Name
          Value: SpendTxnsDev-subnet3
  SpendTxnsDevInternetGateway:
    Type: 'AWS::EC2::InternetGateway'
    Properties:
      Tags:
        - Key: Name
          Value: SpendTxnsDev-igw
  SpendTxnsDevDHCPOptions:
    Type: 'AWS::EC2::DHCPOptions'
    Properties:
      DomainName: ec2.internal
      DomainNameServers:
        - AmazonProvidedDNS
      Tags:
        - Key: Name
          Value: SpendTxnsDev-dopt
  SpendTxnsDevNetworkAcl:
    Type: 'AWS::EC2::NetworkAcl'
    Properties:
      VpcId:
        Ref: SpendTxnsDevVPC
      Tags:
        - Key: Name
          Value: SpendTxnsDev-acl
  SpendTxnsDevRouteTable:
    Type: 'AWS::EC2::RouteTable'
    Properties:
      VpcId:
        Ref: SpendTxnsDevVPC
      Tags:
        - Key: Name
          Value: SpendTxnsDev-route-table
  SpendTxnsDevACL1:
    Type: 'AWS::EC2::NetworkAclEntry'
    Properties:
      CidrBlock: 0.0.0.0/0
      Egress: 'true'
      Protocol: '-1'
      RuleAction: allow
      RuleNumber: '100'
      NetworkAclId:
        Ref: SpendTxnsDevNetworkAcl
  SpendTxnsDevACL2:
    Type: 'AWS::EC2::NetworkAclEntry'
    Properties:
      CidrBlock: 0.0.0.0/0
      Protocol: '-1'
      RuleAction: allow
      RuleNumber: '100'
      NetworkAclId:
        Ref: SpendTxnsDevNetworkAcl
  SpendTxnsDevSubnetAcl:
    Type: 'AWS::EC2::SubnetNetworkAclAssociation'
    Properties:
      NetworkAclId:
        Ref: SpendTxnsDevNetworkAcl
      SubnetId:
        Ref: SpendTxnsDevSubnet1
  SpendTxnsDevGateway:
    Type: 'AWS::EC2::VPCGatewayAttachment'
    Properties:
      VpcId:
        Ref: SpendTxnsDevVPC
      InternetGatewayId:
        Ref: SpendTxnsDevInternetGateway
  SpendTxnsDevSubnetRoute1:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      RouteTableId:
        Ref: SpendTxnsDevRouteTable
      SubnetId:
        Ref: SpendTxnsDevSubnet1
  SpendTxnsDevSubnetRoute2:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      RouteTableId:
        Ref: SpendTxnsDevRouteTable
      SubnetId:
        Ref: SpendTxnsDevSubnet2
  SpendTxnsDevSubnetRoute3:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      RouteTableId:
        Ref: SpendTxnsDevRouteTable
      SubnetId:
        Ref: SpendTxnsDevSubnet3
  SpendTxnsDevRoute:
    Type: 'AWS::EC2::Route'
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      RouteTableId:
        Ref: SpendTxnsDevRouteTable
      GatewayId:
        Ref: SpendTxnsDevInternetGateway
    DependsOn: SpendTxnsDevGateway
  SpendTxnsDevDHCPAssoc:
  SpendTxnsDefaultSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      VpcId:
        Ref: SpendTxnsDevVPC
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: '80'
        ToPort: '80'
        CidrIp: 0.0.0.0/0
      - IpProtocol: tcp
        FromPort: '22'
        ToPort: '22'
        CidrIp: 0.0.0.0/0
      - IpProtocol: tcp
        FromPort: '3306'
        ToPort: '3306'
        CidrIp: 0.0.0.0/0
      SecurityGroupEgress:
      - IpProtocol: "-1"
        CidrIp: 0.0.0.0/0
      Tags:
      - Key: Name
        Value: Web Server Security Group
    Type: 'AWS::EC2::VPCDHCPOptionsAssociation'
    Properties:
      VpcId:
        Ref: SpendTxnsDevVPC
      DhcpOptionsId:
        Ref: SpendTxnsDevDHCPOptions
Outputs:
  StackVPC:
    Description: The ID of the VPC
    Value:
      Ref: SpendTxnsDevVPC
    Export:
      Name:
        'Fn::Sub': '${AWS::StackName}-VPCID'
  StackSubnet:
    Description: The ID of the Subnet1
    Value:
      Ref: SpendTxnsDevSubnet1
    Export:
      Name:
        'Fn::Sub': '${AWS::StackName}-SubnetID'
Description: Spend Transactions networking stack for dev environment.
